--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -1,11 +1,3 @@
-<h1>Create new question</h1>
+<%= render 'form' %>
 
-<form action="/tests/<%= params[:test_id] %>/questions" method="post">
-<input name="aunthenticity_token" value="<%= form_authenticity_token %>" type="hidden">
-  <p>
-    <label for="question-body">Write quesion</label><br>
-    <input type="text" name="question[body]" id="question-body">
-  </p>
-
-  <input type="submit" value="Create">
-</form>
+<%= link_to 'Back', test_path(@question.test) %>
