Create scaffold and test checker

--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,9 +1,10 @@
+<b>Question:</b>
 <p><%= @question.body %></p>
-Answers:<br>
-<% @question.answers.each.with_index(1) do |answer, index| %>
-  <%= index %></strong>
-  <%= answer.body %>
-  <br>
-<% end %>
+<b>Answers:</b><br>
+<%= link_to 'New answer', new_question_answer_path(@question) %>
+<ol>
+  <%= render @question.answers %>
+</ol>
 
+<%= link_to 'Edit', edit_question_path(@question) %> | 
 <%= link_to 'Back', test_path(@question.test) %>
