--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,16 +1,24 @@
 .footer{
-	position: fixed;
-	left: 0; bottom: 0;
-	width: 100%;
-	height: 7vh;
-	background: linear-gradient(#db1515, #630202);
+  position: fixed;
+  left: 0; bottom: 0;
+  width: 100%;
+  height: 7vh;
+  background: linear-gradient(#db1515, #630202);
 }
 
 .footer span{
-	padding-left:15px;
+  padding-left:15px;
 }
 
 .footer a{
-	text-decoration: none;
-	color:black;
+  text-decoration: none;
+  color:black;
+}
+
+.succes {
+  color: green;
+}
+
+.fail {
+  color: red;
 }
