--- a/app/views/tests/_form.html.erb
+++ b/app/views/tests/_form.html.erb
@@ -1,4 +1,5 @@
 <%= form_with model: @test, local: true do |form| %>
+  <%= render 'shared/errors', resource: @test %>
 
   <p>
     <%= form.label :title %>
