--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -1,11 +1,15 @@
 <h1>Tests</h1>
 
+<p>
+  <%= link_to 'New test', new_test_path %>
+</p>
+
 <table>
   <tr>
     <th>Title</th>
     <th>Level</th>
     <th>Questions</th>
-    <th colspan="3">Action</th>
+    <th colspan="4">Action</th>
   </tr>
 
   <%= render @tests %>
