--- a/app/views/shared/_errors.html.erb
+++ b/app/views/shared/_errors.html.erb
@@ -1,9 +1,9 @@
-<% if resource.errors.present? %>
+<% if resourse.errors.present? %>
   <div>
-    <h2><%= pluralize(resource.errors.count, 'error') %> detected:</h2>
+    <h2><%= pluralize(resourse.errors.count, 'error') %> detected:</h2>
 
     <ul>
-      <% resource.errors.full_messages.each do |message| %>
+      <% resourse.errors.full_messages.each do |message| %>
         <li> <%= message %> </li>
       <% end %>
     </ul>
