--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -26,3 +26,13 @@
 .nav.user {
   text-align: right;
 }
+
+.window {
+  width: 30%;
+  margin: auto;
+  border-radius: 10px;
+  input {
+    width: 100%;
+    padding: 10px;
+  }
+}
