--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,9 @@
 
   <body>
     <% if logged_in? %>
-      <p class = "nav user">Welcome, <b><%= current_user.email %></b> Guru</p>
+      <p class = "nav user">Welcome, <b><%= current_user.email %></b>
+      <%= link_to 'Guru', root_path %>
+      <%= link_to 'Exit', logout_path %></p>
     <% end %>
   </body>
 
