--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,5 @@
 <h1>Become a Guru</h1>
 
-<%= render 'form' %>
-<%= link_to 'Back', root_path %>
+<div class = "window">
+  <%= render 'form' %>
+</div>
