--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
     <% if logged_in? %>
       <p class = "nav user">Welcome, <b><%= current_user.email %></b>
       <%= link_to 'Guru', root_path %>
-      <%= link_to 'Exit', logout_path %></p>
+      <%= link_to 'Exit', logout_path, method: :delete %></p>
     <% end %>
   </body>
 
