--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -36,3 +36,18 @@
     padding: 10px;
   }
 }
+
+.flash {
+  border: 2px solid;
+  padding: 10px;
+  border-radius: 5px;
+  display: inline-block;
+}
+
+.flash.notice{
+  border-color: #3c85e0;
+}
+
+.flash.alert{
+  border-color: #ef2727;
+}
