--- a/app/views/admin/tests/_form.html.erb
+++ b/app/views/admin/tests/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: @test, local: true do |form| %>
+<%= form_with model: [:admin, @test], local: true do |form| %>
   <%= render 'shared/errors', resource: @test %>
 
   <p>
@@ -26,4 +26,4 @@
   </p>
 <% end %>
 
-<%= link_to 'Back', tests_path %>
+<%= link_to 'Back', admin_tests_path %>
