--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,14 +10,14 @@
 
   <body>
     <% if user_signed_in? %>
-      <p class = "nav user">
-      Welcome, <b><%= current_user.email %></b>
+      <p class = "nav user">Welcome, <b><%= current_user.email %></b>
       <%= link_to 'Guru', root_path %>
       <%= link_to 'Exit', destroy_user_session_path, method: :delete %></p>
     <% end %>
-
+  </body>
+  
+  <%= render 'shared/flash' %>
   <%= yield %>
 
   <%= render 'layouts/footer' %>
-  </body>
 </html>
