--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -11,4 +11,4 @@
   <p><%= form.submit %></p>
 <% end %>
 
-<%= link_to 'Back', test_path(@question.test) %>
+<%= link_to 'Back', admin_test_path(@question.test) %>
