add question resource to admin and set automate author_if for tests

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -36,3 +36,39 @@
     padding: 10px;
   }
 }
+
+.nav.user {
+  text-align: right;
+}
+
+.nav.logo {
+  text-align: left;
+  font-size: 14px;
+}
+
+.nav.nav-admin {
+  height: 35px;
+  padding: 15px;
+  line-height: 35px;
+  color: white;
+  background-color: #4293e6;
+  margin-bottom: 40px;
+}
+
+.nav-admin.title {
+  font-size: 140%;
+  font-weight: bold;
+}
+
+.nav-admin.user {
+  float: right;
+}
+
+.nav-admin.user-email {
+  text-decoration: underline;
+}
+
+.nav.nav-admin
+a {
+  color: white;
+}
