--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,9 @@
   </head>
 
   <body>
-    <% if user_signed_in? %>
+    <% if current_user.type == 'Admin' %>
+      <%= render 'admin/nav' %>
+    <% elsif user_signed_in? %>
       <p class = "nav user">Welcome, <b><%= current_user.email %></b>
       <%= link_to 'Guru', root_path %>
       <%= link_to 'Exit', destroy_user_session_path, method: :delete %></p>
