--- a/app/views/admin/tests/show.html.erb
+++ b/app/views/admin/tests/show.html.erb
@@ -4,11 +4,11 @@ Test level:<%= @test.level %><br>
 Questions:<br>
 
 <table>
-  <%= render partial: 'questions/question', collection: @test.questions %>
+  <%= render partial: 'admin/questions/question', collection: @test.questions %>
 </table>
 
 <%= link_to 'Edit', edit_admin_test_path(@test) %>
-<%= link_to 'Delete', admin_test_path(@test), method: :delete, data: {confirm: 'Are you sure?'} %><
+<%= link_to 'Delete', admin_test_path(@test), method: :delete, data: {confirm: 'Are you sure?'} %>
   <br>
 
 <%= link_to 'Back', admin_tests_path %>
