--- a/app/views/admin/tests/_form.html.erb
+++ b/app/views/admin/tests/_form.html.erb
@@ -2,17 +2,17 @@
   <%= render 'shared/errors', resource: @test %>
 
   <p>
-    <%= form.label :title %>
+    <%= form.label t('.title') %>
     <%= form.text_field :title, id: :test_title %>
   </p>
 
   <p>
-    <%= form.label :level %>
+    <%= form.label t('.level') %>
     <%= form.number_field :level, id: :test_level %>
   </p>
 
   <p>
-    <%= form.label :category_id %>
+    <%= form.label t('.category_id') %>
     <%= form.collection_select :category_id, Category.all, :id, :title, prompt: true %>
   </p>
   
@@ -21,4 +21,4 @@
   </p>
 <% end %>
 
-<%= link_to 'Back', admin_tests_path %>
+<%= link_to t('.back'), admin_tests_path %>
