--- a/app/views/admin/tests/show.html.erb
+++ b/app/views/admin/tests/show.html.erb
@@ -1,17 +1,21 @@
-<strong>Test title:<%= @test.title %><br>
-Test level:<%= @test.level %><br>
+<strong>
+	<%= t('.test_title') %>
+	<%= @test.title %><br>
+	<%= t('.test_level') %>
+	<%= @test.level %><br>
+	<%= t('.questions') %><br>
+</strong>
 
-Questions:<br>
 <p>
-  <%= link_to 'New question', new_admin_test_question_path(@test) %>
+  <%= link_to t('.new_question'), new_admin_test_question_path(@test) %>
 </p>
 
 <table>
   <%= render partial: 'admin/questions/question', collection: @test.questions %>
 </table>
 
-<%= link_to 'Edit', edit_admin_test_path(@test) %>
-<%= link_to 'Delete', admin_test_path(@test), method: :delete, data: {confirm: 'Are you sure?'} %>
+<%= link_to t('.edit'), edit_admin_test_path(@test) %>
+<%= link_to t('.delete'), admin_test_path(@test), method: :delete, data: {confirm: t('.confirm')} %>
   <br>
 
-<%= link_to 'Back', admin_tests_path %>
+<%= link_to t('.back'), admin_tests_path %>
