--- a/app/views/admin/tests/_form.html.erb
+++ b/app/views/admin/tests/_form.html.erb
@@ -1,14 +1,15 @@
 <%= form_with model: [:admin, @test], local: true do |form| %>
   <%= render 'shared/errors', resource: @test %>
 
+  <div class="form-group col-sm-6">
   <p>
     <%= form.label t('.title') %>
-    <%= form.text_field :title, id: :test_title %>
+    <%= form.text_field :title, id: :test_title, class: 'form-control' %>
   </p>
 
   <p>
     <%= form.label t('.level') %>
-    <%= form.number_field :level, id: :test_level %>
+    <%= form.number_field :level, id: :test_level, class: 'form-control' %>
   </p>
 
   <p>
@@ -19,6 +20,7 @@
   <p>
     <%= form.submit %>
   </p>
+  </div>
 <% end %>
 
-<%= link_to t('.back'), admin_tests_path %>
+<%= link_to t('.back'), admin_tests_path, class: 'nav-link' %>
