--- a/app/views/admin/answers/_form.html.erb
+++ b/app/views/admin/answers/_form.html.erb
@@ -1,14 +1,13 @@
 <%= form_with(model: [:admin, @question, @answer], local: true) do |form| %>
   <%= render 'shared/errors', resource: @answer %>
-  <p>
+  <div class="form-group col-sm-6">
     <%= form.label :body %><br>
-    <%= form.text_area :body, id: :answer_body, rows: 7, cols: 60 %>
-  </p>
+    <%= form.text_area :body, id: :answer_body, class: 'form-control' %>
+    </div>
 
-  <p>
+    <div class="form-group col-sm-6">
     <%= form.label :correct %><br>
     <%= form.check_box :correct, id: :answer_correct %>
-  </p>
-
+  </div>
   <p><%= form.submit %></p>
 <% end %>
