--- a/app/views/admin/tests/index.html.erb
+++ b/app/views/admin/tests/index.html.erb
@@ -1,16 +1,24 @@
-<h1><%= t('.tests') %></h1>
+<div class="row justify-content-center">
+  <h1><%= t('.tests') %></h1>
+</div>
 
-<p>
-  <%= link_to t('.new_test'), new_admin_test_path %>
-</p>
+<div class="row justify-content-center">
+  <p>
+    <%= link_to t('.new_test'), new_admin_test_path %>
+  </p>
+</div>
 
-<table>
-  <tr>
-    <th><%= t('.title') %></th>
-    <th><%= t('.level') %></th>
-    <th><%= t('.questions') %></th>
-    <th colspan="4"><%= t('.action') %></th>
-  </tr>
+<div class="row col-md-6 offset-md-3 table-responsive-sm">
+  <table class="table table-striped">
+    <thead class="thead-dark">
+      <tr>
+        <th><%= t('.title') %></th>
+        <th><%= t('.level') %></th>
+        <th><%= t('.questions') %></th>
+        <th colspan="4"><%= t('.action') %></th>
+      </tr>
+    </thead>
 
-  <%= render @tests %>
-</table>
+    <%= render @tests %>
+  </table>
+</div>
