--- a/app/views/admin/tests/show.html.erb
+++ b/app/views/admin/tests/show.html.erb
@@ -1,21 +1,30 @@
-<strong>
-	<%= t('.test_title') %>
-	<%= @test.title %><br>
-	<%= t('.test_level') %>
-	<%= @test.level %><br>
-	<%= t('.questions') %><br>
-</strong>
+<div class="row justify-content-center font-weight-bold">
+  <%= t('.test_title') %>
+  <%= @test.title %>
+</div>
 
-<p>
-  <%= link_to t('.new_question'), new_admin_test_question_path(@test) %>
+<div class="row justify-content-center font-weight-bold">
+  <%= t('.test_level') %>
+  <%= @test.level %>
+</div>
+
+<div class="row justify-content-center">
+  <%= t('.questions') %>
+  <%= @test.questions.count %>
+</div>
+
+<div class="row justify-content-center font-weight-bold">
+  <%= link_to t('.new_question'), new_admin_test_question_path(@test), class: 'nav-link' %>
+</div>
+
+<div class="row col-md-6 offset-md-3 table-responsive-sm">
+  <table class="table table-striped">
+    <%= render partial: 'admin/questions/question', collection: @test.questions %>
+  </table>
+</div>
+
+<p class="row justify-content-center">
+  <%= link_to t('.edit'), edit_admin_test_path(@test), class: 'nav-link' %> | 
+  <%= link_to t('.delete'), admin_test_path(@test), method: :delete, data: {confirm: t('.confirm')}, class: 'nav-link' %> | 
+  <%= link_to t('.back'), admin_tests_path, class: 'nav-link' %>
 </p>
-
-<table>
-  <%= render partial: 'admin/questions/question', collection: @test.questions %>
-</table>
-
-<%= link_to t('.edit'), edit_admin_test_path(@test) %>
-<%= link_to t('.delete'), admin_test_path(@test), method: :delete, data: {confirm: t('.confirm')} %>
-  <br>
-
-<%= link_to t('.back'), admin_tests_path %>
