--- a/app/views/shared/_errors.html.erb
+++ b/app/views/shared/_errors.html.erb
@@ -4,7 +4,9 @@
 
     <ul>
       <% resource.errors.full_messages.each do |message| %>
-        <li> <%= message %> </li>
+        <div class="alert alert-danger" role="alert">
+          <li> <%= message %> </li>
+        </div>
       <% end %>
     </ul>
   </div>
