--- a/app/views/shared/_flash.html.erb
+++ b/app/views/shared/_flash.html.erb
@@ -1,3 +1,5 @@
 <% flash.each do |key, message| %>
-  <%= content_tag :p, message, class: "flash #{key}" %>
+  <div class="row col-sm-4 alert alert-primary flash #{key}" role="alert">
+    <%= message %>
+  </div>
 <% end %>
