--- a/app/views/test_passages/result.html.erb
+++ b/app/views/test_passages/result.html.erb
@@ -1,22 +1,26 @@
-<h1>The <%= @test_passage.test.title %> Test was complited!</h1>
+<div class="row justify-content-center">
+  <h1>The <%= @test_passage.test.title %> Test was complited!</h1>
+</div>
 
-<p>
-  Your result is <%= @test_passage.correct_questions %>/
-  <%= @test_passage.test.questions.count %><br>
-  Your succes persent is 
-  <!-- Вывод результата в процентах ниже в блоке if -->
-</p>
+<div class="row justify-content-center">
+  <p>
+    Your result is <%= @test_passage.correct_questions %>/
+    <%= @test_passage.test.questions.count %><br>
+    Your succes persent is
+  </p>
+</div>
 
-
-<% if @test_passage.success? %>
-  <h2 class = "succes">
-    <%= @test_passage.points_persents %>%<br> Nice job!
-  </h2>
-<% else %>
-  <h2 class = "fail">
-    <%= @test_passage.points_persents %>%<br> Test failed
-  </h2>
-<% end %>
+<div class="row justify-content-center">
+  <% if @test_passage.success? %>
+    <h2 class = "succes">
+      <%= @test_passage.points_persents %>%<br> Nice job!
+    </h2>
+  <% else %>
+    <h2 class = "fail">
+      <%= @test_passage.points_persents %>%<br> Test failed
+    </h2>
+  <% end %>
+</div>
 
 <%= link_to 'Back to tests list', root_path %>
 
