--- a/app/views/test_passages/show.html.erb
+++ b/app/views/test_passages/show.html.erb
@@ -1,23 +1,33 @@
-<h1>Pass the <%= @test_passage.test.title %> Test</h1>
+<div class="row justify-content-center">
+  <h1>Pass the <%= @test_passage.test.title %> Test</h1>
+</div>
 
-<b>
-  <%= @test_passage.current_question.body %>
-</b>
+<div class="row justify-content-center">
+  <p  class="font-weight-bold">
+    <%= @test_passage.current_question.body %>
+  </p>
+</div>
 
-<%= form_with url: test_passage_path(@test_passage), local: true, method: :patch do |form| %>
-  <%= form.collection_check_boxes :answer_ids, @test_passage.current_question.answers, :id, :body, include_hidden: false do |b| %>
+<div class="row justify-content-center">
+  <%= form_with url: test_passage_path(@test_passage), local: true, method: :patch do |form| %>
+    <%= form.collection_check_boxes :answer_ids, @test_passage.current_question.answers, :id, :body, include_hidden: false do |b| %>
+      <p>
+        <%= b.check_box id: "answer_ids_#{b.object.id}" %>
+        <%= b.label %>
+      </p>
+    <% end %>
+</div>
+
+<div class="row justify-content-center">
     <p>
-      <%= b.check_box id: "answer_ids_#{b.object.id}" %>
-      <%= b.label %>
+      <%= form.submit 'Next', class:"btn btn-info" %>
     </p>
   <% end %>
+</div>
 
+<div class="row justify-content-center">
   <p>
-    <%= form.submit 'Next' %>
+    <%= @test_passage.question_index %>/<%= @test_passage.test.questions.count %>
   </p>
-<% end %>
-
-<p>
-  <%= @test_passage.question_index %>/<%= @test_passage.test.questions.count %>
-</p>
+</div>
 
