--- a/app/views/admin/gists/index.html.erb
+++ b/app/views/admin/gists/index.html.erb
@@ -1,4 +1,3 @@
-
 <h1><%= t('.gist_list') %></h1>
 
 <table>
@@ -7,10 +6,10 @@
       <th><%= t('.link') %></th>
       <th><%= t('.user') %></th>
     </tr>
-  <%= @gists.each do |gist| %>
+  <% @gists.each do |gist| %>
     <tr>
       <td><%= link_to truncate(gist.question.body, length: 25), admin_question_path(gist.question) %></td>
-      <td><%= link_to gist.gist_link, "https://gist.github.com/#{gist.gist_link}" %></td>
+      <td><%= link_to t('.gist'), gist.url %></td>
       <td><%= link_to truncate(gist.user.email) %></td>
       <br>
     </tr>
