--- a/app/views/admin/tests/index.html.erb
+++ b/app/views/admin/tests/index.html.erb
@@ -5,7 +5,7 @@
 <div class="row justify-content-center">
   <p>
     <%= link_to t('.new_test'), new_admin_test_path %>
-    <%= link_to 'Gists', admin_gists_index_path %>
+    <%= link_to t('.gist'), admin_gists_index_path %>
   </p>
 </div>
 
