add javascript to project

--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -4,12 +4,16 @@
   </h1>
 </div>
 
-<div class="row col-md-6 offset-md-3 table-responsive-sm">
+<div class="row col-md-8 offset-md-2 table-responsive-sm">
 
   <table class="table table-striped">
     <thead class="thead-dark">
       <tr>
-        <th><%= t('.title') %></th>
+        <th class='sort-by-title pointer'>
+          <%= t('.title') %>
+          <%= octicon 'arrow-up', class: 'text-success hide' %>
+          <%= octicon 'arrow-down', class: 'text-success hide' %>
+        </th>
         <th><%= t('.level') %></th>
         <th><%= t('.question') %></th>
         <th><%= t('.action') %></th>
