--- a/app/views/admin/tests/index.html.erb
+++ b/app/views/admin/tests/index.html.erb
@@ -13,7 +13,11 @@
   <table class="table table-striped">
     <thead class="thead-dark">
       <tr>
-        <th><%= t('.title') %></th>
+        <th class='sort-by-title pointer'>
+          <%= t('.title') %>
+          <%= octicon 'arrow-up', class: 'text-success hide' %>
+          <%= octicon 'arrow-down', class: 'text-success hide' %>
+        </th>
         <th><%= t('.level') %></th>
         <th><%= t('.questions') %></th>
         <th colspan="4"><%= t('.action') %></th>
