--- a/app/views/admin/tests/index.html.erb
+++ b/app/views/admin/tests/index.html.erb
@@ -2,6 +2,8 @@
   <h1><%= t('.tests') %></h1>
 </div>
 
+<%= render 'shared/errors', resource: @test %>
+
 <div class="row justify-content-center">
   <p>
     <%= link_to t('.new_test'), new_admin_test_path %><br>
