--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,7 +6,6 @@
 
       <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
         <div class="form-group">
-          <%= devise_error_messages! %>
           <p>
             <%= f.label :first_name %><br />
             <%= f.text_field :first_name, autofocus: true, placeholder: "First Name", class: 'form-control' %>
@@ -38,7 +37,7 @@
           <br>
 
           <div class="form-actions">
-            <%= f.submit t('.signup'), class: "btn-custom2" %>
+            <%= f.submit t('.sign_up'), class: "btn-custom2" %>
           </div>
         </div>
       <% end %>
