add host to prod

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
 <div class="footer">
   <span><%= current_year %></span>
   <span>Яна Манцевич</span><br>
-  <span><%= github_link('yanamanc', 'TestGuru') %> - платформа для тестирования</span><br>
-  <span><a href="thinknetica.com" target="blank">Учебный проект в онлайн-школе Thinknetica</a></span>
+  <span><%= github_link('yanamanc', 'TestGuru') %> - платформа для тестирования  |<a href="http://thinknetica.com/" target="blank">Учебный проект в онлайн-школе Thinknetica</a></span><br>
+  <%= link_to 'Contact us', new_feedback_path %>
 </div>
