--- a/app/assets/stylesheets/layouts.scss
+++ b/app/assets/stylesheets/layouts.scss
@@ -1,18 +1,17 @@
-.footer{
+.footer {
   position: fixed;
   left: 0; bottom: 0;
   width: 100%;
-  height: 7vh;
+  height: 8vh;
   background: linear-gradient( #231ae5,  #08054a);
+  padding: 10px;
 }
 
-.footer span{
-  padding-left:15px;
-}
-
-.footer a{
+.footer, .footer a {
   text-decoration: none;
-  color:black;
+  color: white;
+  padding-left: 15px;
+  font-size: 15px;
 }
 
 .succes {
@@ -37,48 +36,23 @@
   }
 }
 
-.nav.user {
-  text-align: right;
-}
-
-.nav.logo {
-  text-align: left;
-  font-size: 14px;
-}
-
-.nav.nav-admin {
-  height: 35px;
-  padding: 15px;
-  line-height: 35px;
+.navbar a, .navbar p {
   color: white;
-  background-color: #4293e6;
-  margin-bottom: 40px;
-}
-
-.nav-admin.title {
-  font-size: 140%;
-  font-weight: bold;
-}
-
-.nav-admin.user {
-  float: right;
-}
-
-.nav-admin.user-email {
-  text-decoration: underline;
-}
-
-.nav.nav-admin
-a {
-  color: white;
+  font-size: 1.25rem;
 }
 
 header {
+  position: fixed;
+  left: 0; top: 0;
   width: 100%;
   background: linear-gradient( #231ae5,  #08054a);
-  color: white;
 }
 
 .progress {
   width: 10%;
+}
+
+table {
+  box-shadow: 5px 10px 18px blue;
+  font-size: 15px;
 }
