--- a/app/views/admin/tests/index.html.erb
+++ b/app/views/admin/tests/index.html.erb
@@ -6,6 +6,7 @@
 
 <div class="row justify-content-center">
   <p>
+    <%= link_to 'Statistic', pages_statistic_path %><br>
     <%= link_to t('.new_test'), new_admin_test_path %><br>
     <%= link_to t('.gist'), admin_gists_index_path %>
   </p>
