--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,21 +12,17 @@
   <body>
     <header>
       <% if user_signed_in? %>
-        <nav class="navbar navbar-dark">
+        <nav class="navbar">
           <% if current_user&.admin? %>
-            <p class = "nav navbar-brand justify-content-start">
-              <%= link_to t('.admin_panel'), admin_tests_path %>
-            </p>
+            <%= link_to t('.admin_panel'), admin_tests_path %>
           <% end %>
-          <p class = "nav navbar-brand justify-content-start">
-            <%= link_to 'Guru', root_path %>
-          </p>
-          <p class = "nav navbar-brand justify-content-end">Welcome, <%= current_user.email %>
+          <%= link_to 'Guru', root_path %>
+          <p class = "justify-content-end">Welcome, <%= current_user.email %> | 
             <%= link_to 'Exit', destroy_user_session_path, method: :delete %>
           </p>
         </nav>
       <% end %>
-    </header>
+    </header><br><br>
   </body>
   
   <%= render 'shared/flash' %>
