add rewards functionality

--- a/app/views/admin/tests/index.html.erb
+++ b/app/views/admin/tests/index.html.erb
@@ -8,7 +8,8 @@
   <p>
     <%= link_to 'Statistic', pages_statistic_path %><br>
     <%= link_to t('.new_test'), new_admin_test_path %><br>
-    <%= link_to t('.gist'), admin_gists_index_path %>
+    <%= link_to t('.gist'), admin_gists_index_path %><br>
+    <%= link_to t('Rewards'), rewards_path %>
   </p>
 </div>
 
