--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -6,6 +6,8 @@
 
 <div class="row col-md-8 offset-md-2 table-responsive-sm">
 
+  <%= link_to t('Rewards'), rewards_path %>
+
   <table class="table table-striped">
     <thead class="thead-dark">
       <tr>
